--- a/src/App.css
+++ b/src/App.css
@@ -9,12 +9,13 @@ h1{color: #0052D4;}
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding-top: 160px;
   row-gap: 10px;
+  height: 100vh; 
 }
 #second{
   width: 200px;
   display: flex;
+  justify-content: center;
   justify-content: space-between;
   align-items: center;
 }
@@ -23,6 +24,7 @@ input{
   width: 250px; 
   height: 25px; 
   border-radius: 10px;
+  padding-left: 15px;
 }
 #in{
   border: none;
@@ -31,6 +33,7 @@ input{
   font-size: large;
   font-weight: bold;
   color: red;
+  width: 300px;
 }
 #ina{
   border: none;
@@ -39,54 +42,21 @@ input{
   font-size: medium;
   font-weight: bold;
   color: red;
-  width: 300px;
+  width: 350px;
 }
 button, img:hover{cursor: pointer;}
-button{
-  padding: 10px 15px;
-  border-radius: 15px;
-  border: none;
-  background-color: #65C7F7;
-  color: red;
-  font-weight: bolder;
-  font-size: larger;
-}
-#con{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-input{
-  border: solid 1px black;
-  border-radius: 20px;
-  padding-left: 15px;
-  font-weight: bolder;
-  color: rgb(248, 3, 3);
-}
-label{
-  font-size: larger;
-  font-weight: bold;
-}
-h1{
-  font-size: 34px;
-  font-weight: bold;
-  font-family: 'Times New Roman', Times, serif;
-  color:red;
-}
-button{
-  border: none;
-  border-radius: 10px;
-  background-color:aqua;
-  color: black;
-  padding: 5px;
-  width: 80px;
-}
-button:hover{
-  cursor: pointer;
-}
 #con2{
   display: flex;
   flex-direction: column;
   gap: 5px;
   align-items: center;
+}
+button{
+  padding: 10px 15px;
+  background-color: #6f9ce4;
+  color: red;
+  font-weight: bold;
+  border-radius: 10px;
+  font-size: larger;
+  border: none;
 }
